--- a/app/running/templates/base.html
+++ b/app/running/templates/base.html
@@ -11,29 +11,53 @@
     <title>{{ title }}</title>
 </head>
 <body>
-    <header style="background-color: gainsboro;">
-         <nav class="navbar navbar-expand-lg navbar-custom py-2">
-            <div class="container-fluid d-flex justify-content-around align-items-center">
-                <div class="d-flex align-items-center">
-                    <a class="navbar-brand" href="/">
-                        <img src="{% static 'running/logo.png' %}" alt="Логотип" class="logo_main" style="width: 70px;">
-                    </a>
-                    <div>
-                        <div class="navbar-brand-title h5 text-primary">БЕГОВОЙ ТУРИЗМ</div>
-                        <div class="navbar-subtitle text-primary">Организация дружеских пробегов по всему миру</div>
+    <header style="background-color:rgb(244, 242, 242);">
+    <nav class="navbar navbar-light py-2">
+        <div class="container-fluid d-flex justify-content-around  align-items-center">
+            <div class="d-flex align-items-center">
+                <a class="navbar-brand d-flex align-items-center" href="/">
+                    <img src="{% static 'running/logo.png' %}" alt="Логотип" class="logo_main" style="width: 70px;">
+                    <div class="ms-2">
+                        <div class="h5 text-primary mb-0">БЕГОВОЙ ТУРИЗМ</div>
+                        <div class="text-primary" style="font-size: 0.85rem;">Организация дружеских пробегов по всему миру</div>
                     </div>
+                </a>
                 </div>
-
-                <div class="d-flex align-items-center">
-                    <a href="#" class="text-decoration-none text-dark me-3"><i class="bi bi-list fs-4"></i></a>
+                <div>
+                    <a class="text-decoration-none text-dark me-3" data-bs-toggle="offcanvas" href="#menuOffcanvas" role="button" aria-controls="menuOffcanvas">
+                        <i class="bi bi-list fs-4"></i>
+                    </a>
                     <a href="#" class="text-decoration-none text-dark"><i class="bi bi-globe fs-4"></i></a>
                 </div>
             </div>
         </nav>
     </header>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="menuOffcanvas" aria-labelledby="menuOffcanvasLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="menuOffcanvasLabel">Навигация</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Закрыть"></button>
+        </div>
+        <div class="offcanvas-body">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Главная</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/past-events/">Прошедшие события</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/upcoming-events/">Будущие события</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contacts/">Контакты</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     {% block content %}{% endblock %}
     <footer>
         
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
