изображение главной страницы и анимация

--- a/app/running/templates/base.html
+++ b/app/running/templates/base.html
@@ -16,7 +16,7 @@
         <div class="container-fluid d-flex justify-content-around  align-items-center">
             <div class="d-flex align-items-center">
                 <a class="navbar-brand d-flex align-items-center" href="/">
-                    <img src="{% static 'running/logo.png' %}" alt="Логотип" class="logo_main" style="width: 70px;">
+                    <img src="{% static 'assets/logo.png' %}" alt="Логотип" class="logo_main" style="width: 70px;">
                     <div class="ms-2">
                         <div class="h5 text-primary mb-0">БЕГОВОЙ ТУРИЗМ</div>
                         <div class="text-primary" style="font-size: 0.85rem;">Организация дружеских пробегов по всему миру</div>
