--- a/app/running/templates/base.html
+++ b/app/running/templates/base.html
@@ -40,16 +40,10 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Главная</a>
+                    <a class="nav-link" href="{% url 'home' %}">Главная</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/past-events/">Прошедшие события</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/upcoming-events/">Будущие события</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contacts/">Контакты</a>
+                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'events' %}">События</a>
                 </li>
             </ul>
         </div>
