--- a/app/running/templates/running/main.html
+++ b/app/running/templates/running/main.html
@@ -12,8 +12,8 @@
              style="height: 90vh; object-fit: cover; filter: brightness(70%);">
 
         <div class="position-absolute top-50 start-50 translate-middle text-center text-white hero-content">
-            <h1 class="display-3 fw-bold mb-3">Дружеские пробежки по всему миру</h1>
-            <p class="lead">Исследуй мир бегом — красиво, быстро и вместе</p>
+            <h1 class="display-3 fw-bold mb-3">Беговые путешествия по всему миру</h1>
+            <p class="lead">Оставляем свои  следы в этом мире</p>
         </div>
     </section>
 </main>
