--- a/app/running/templates/running/event_detail.html
+++ b/app/running/templates/running/event_detail.html
@@ -11,7 +11,8 @@
             <div style="height: 700px; overflow: hidden;">
                 <img src="{{ event.event_foto.image.url }}"
                      alt="{{ event.event_name }}"
-                     class="w-100 h-100 object-fit-cover">
+                     class="w-100 h-100 object-fit-cover"
+                >
             </div>
         {% endif %}
         <div class="card-body p-4">
@@ -27,8 +28,11 @@
                     {{ event.event_report }}
                 </div>
             {% endif %}
-
+            
             <div class="d-flex flex-wrap gap-3">
+                <a href="{{ event.event_route }}"  target="_blank" class="btn btn-outline-secondary d-flex align-items-center gap-2">
+                    <i class="bi bi-geo-alt-fill"></i> Маршрут
+                </a>
                 {% if event.event_video %}
                     <a href="{{ event.event_video }}" target="_blank" class="btn btn-primary d-flex align-items-center gap-2">
                         <i class="bi bi-play-circle"></i> Смотреть видео
