--- a/app/running/templates/includes/feedback.html
+++ b/app/running/templates/includes/feedback.html
@@ -10,6 +10,7 @@
         <div class="col-12 col-md-8 bg-white p-4 rounded-4 shadow">
             <h4 class="mb-4 text-primary fw-bold text-center text-md-start">Обратная связь</h4>
             <form>
+                {% csrf_token %}
                 <div class="row g-3 align-items-end">
                     <div class="col-12 col-md-6">
                         <label for="name" class="form-label">Ваше имя</label>
