--- a/app/running/templates/running/main.html
+++ b/app/running/templates/running/main.html
@@ -9,7 +9,8 @@
         <img src="{% static 'assets/main.jpg' %}" 
              class="img-fluid w-100 hero-image" 
              alt="Главное изображение" 
-             style="height: 90vh; object-fit: cover; filter: brightness(70%);">
+             style="height: 90vh; object-fit: cover; filter: brightness(70%);"
+        >
 
         <div class="position-absolute top-50 start-50 translate-middle text-center text-white hero-content">
             <h1 class="display-3 fw-bold mb-3">Беговые путешествия по всему миру</h1>
