--- a/app/running/templates/base.html
+++ b/app/running/templates/base.html
@@ -13,6 +13,19 @@
     <title>{{ title }}</title>
 </head>
 <body>
+<div class="wrapper--alert-alert position-absolute z-index-1 top-0">
+    <div class="alert-content">
+    {% if messages %}
+        {% for msg in messages %}
+            <div class="wrapper-alert {% if msg.success %} alert-success {% elif msg.error %} alert-danger {% endif %}">
+                 <div class="alert alert-{{ msg.tags }}">
+                     <p>{{ msg }}</p>
+                </div>
+            </div>
+        {% endfor %}
+    {% endif %}
+    </div>
+</div>
 <header style="background-color:rgb(244, 242, 242);">
     <nav class="navbar navbar-light py-2">
         <div class="container-fluid d-flex justify-content-around align-items-center">
@@ -97,5 +110,7 @@
     </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+
+<script src="{% static 'js/messages.js' %}"></script>
 </body>
 </html>
