регулярное выражение для номера телефона

--- a/app/running/templates/base.html
+++ b/app/running/templates/base.html
@@ -13,7 +13,7 @@
     <title>{{ title }}</title>
 </head>
 <body>
-<div class="wrapper--alert-alert position-absolute z-index-1 top-0">
+<div class="wrapper--alert-alert position-fixed z-index-1 top-0">
     <div class="alert-content">
     {% if messages %}
         {% for msg in messages %}
