--- a/app/running/templates/includes/feedback.html
+++ b/app/running/templates/includes/feedback.html
@@ -24,6 +24,7 @@
                         <div class="input-group">
                             <span class="input-group-text"><i class="bi bi-telephone-fill"></i></span>
                             {{ form.phone }}
+                            {{ form.phone.errors }}
                         </div>
                     </div>
                 </div>
