--- a/app/running/templates/running/main.html
+++ b/app/running/templates/running/main.html
@@ -17,5 +17,8 @@
         </div>
     </section>
 </main>
+<div class="container mt-5">
+    {% include 'includes/filter.html' %} 
+</div>
 <script src="{% static 'js/Main3d.js' %}"></script>
 {% endblock %}
