--- a/app/running/templates/running/events.html
+++ b/app/running/templates/running/events.html
@@ -4,52 +4,49 @@
 {% block content %}
 <section class="py-5" style="min-height: 650px;">
     <div class="container">
-        <h2 class="text-center text-primary mb-4">События</h2>
-       <form method="get" class="mb-4">
-            <div class="row">
-                <div class="col-md-3 mb-2">
-                    <select name="type" class="form-select" onchange="this.form.submit()">
-                        <option value="">Все</option>
-                        <option value="0" {% if current_type == "0" %}selected{% endif %}>Выполненные</option>
-                        <option value="1" {% if current_type == "1" %}selected{% endif %}>Будущие</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="btn-group flex-wrap" role="group">
+        <h2 class="text-center text-primary mb-4">События и Проекты</h2>
+
+        {% include 'includes/filter.html' %} 
+
+        <div class="row">
+            <div class="col-md-3">
+                <form method="get" class="mb-4">
+                    <div class="d-flex flex-column gap-2">
+                        <a href="?{% if current_type %}type={{ current_type }}{% endif %}" 
+                        class="btn btn-outline-primary w-100 {% if not current_year %}active{% endif %}">
+                            Все время
+                        </a>
                         {% for year in years %}
-                            <a href="?{% if current_type %}type={{ current_type }}&{% endif %}year={{ year }}"
-                            class="btn btn-outline-primary {% if year|stringformat:"s" == current_year %}active{% endif %}">
+                            <a href="?{% if current_type %}type={{ current_type }}&{% endif %}year={{ year }}" 
+                            class="btn btn-outline-primary w-100 {% if year|stringformat:"s" == current_year %}active{% endif %}">
                                 {{ year }}
                             </a>
                         {% endfor %}
                     </div>
-                </div>
+                </form>
             </div>
-        </form>
-        <div class="row justify-content-center">
-            <div class="col-lg-10">
+            <div class="col-md-9">
                 <div class="list-group shadow-sm">
-                {% for event in events %}
-                <a href="{% url 'event_detail' event.pk %}" class="list-group-item list-group-item-action d-flex align-items-center gap-4 py-3">
-                    <div style="flex-shrink: 0;">
-                        {% if event.event_foto %}
-                            <img src="{{ event.event_foto.image.url }}" alt="{{ event.event_name }}"
-                                 class="rounded" style="width: 80px; height: 80px; object-fit: cover;">
-                        {% else %}
-                            <img src="{% static 'assets/default.jpg' %}" alt="Нет изображения"
-                                 class="rounded" style="width: 80px; height: 80px; object-fit: cover;">
-                        {% endif %}
-                    </div>
-                    <div class="flex-grow-1">
-                        <h5 class="mb-1">{{ event.event_name }}</h5>
-                        <small class="text-muted">{{ event.event_date1 }} – {{ event.event_date2 }}</small>
-                    </div>
-                </a>
-                {% empty %}
-                    <div class="alert alert-warning">Событий не найдено по фильтрам.</div>
-                {% endfor %}
+                    {% for event in events %}
+                    <a href="{% url 'event_detail' event.pk %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center gap-4 py-3">
+                        <div class="flex-grow-1">
+                            <h5 class="mb-1">{{ event.event_name }}</h5>
+                            <small class="text-muted">{{ event.event_date1 }} – {{ event.event_date2 }}</small>
+                        </div>
+                        <div class="flex-shrink-0">
+                            {% if event.event_foto %}
+                                <img src="{{ event.event_foto.image.url }}" alt="{{ event.event_name }}"
+                                     class="rounded" style="width: 80px; height: 80px; object-fit: cover;">
+                            {% else %}
+                                <img src="{% static 'assets/default.jpg' %}" alt="Нет изображения"
+                                     class="rounded" style="width: 80px; height: 80px; object-fit: cover;">
+                            {% endif %}
+                        </div>
+                    </a>
+                    {% empty %}
+                        <div class="alert alert-warning mt-3">Событий не найдено по фильтрам.</div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
