--- a/app/running/templates/includes/feedback.html
+++ b/app/running/templates/includes/feedback.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid py-5 bg-light">
     <div class="row justify-content-center align-items-center g-4 px-3 px-md-5">
-        <div class="col-12 col-md-3 text-center text-md-start mb-3 mb-md-0">
+        <div class="col-12 col-md-2 text-center text-md-start mb-3 mb-md-0">
             <img src="{% static 'assets/logo.png' %}" alt="Логотип" class="img-fluid spin-animation" style="max-width: 120px;">
         </div>
         <div class="col-12 col-md-8 bg-white p-4 rounded-4 shadow">
@@ -28,10 +28,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="mt-4 d-grid d-md-flex justify-content-md-start">
+                <div class="mt-4 d-grid d-md-flex flex-column align-items-start gap-2">
                     <button type="submit" class="btn btn-primary d-flex align-items-center gap-2">
                         <i class="bi bi-send-fill"></i> Отправить
                     </button>
+                    <small class="text-muted">
+                        Нажимая на кнопку, я даю согласие на  обработку персональных данных
+                        в соответствии с <a href="{% url 'politics' %}">политикой конфедециальности</a>. 
+                    </small>
                 </div>
             </form>
         </div>
