--- a/app/running/templates/base.html
+++ b/app/running/templates/base.html
@@ -13,7 +13,7 @@
 
     <title>{{ title }}</title>
 </head>
-<body>
+<body style="overflow-x: hidden;">
 <div class="wrapper--alert-alert position-fixed z-index-1 top-0">
     <div class="alert-content">
     {% if messages %}
@@ -39,17 +39,16 @@
                 </a>
             </div>
             <a class="navbar-brand text-center mx-auto" href="/" style="display: flex; flex-direction: column; align-items: center; text-decoration: none;">
-                
-                <div class="h5 text-primary mb-0">БЕГОВОЙ ТУРИЗМ</div>
-                <div class="text-primary" style="font-size: 0.75rem;">Организация и проведение дружеских пробегов в любой точке Земли</div>
+                <div class="h4 text-primary mb-0">БЕГОВОЙ ТУРИЗМ</div>
+                <div class="text-primary h4" style="font-size: 0.75rem;">Организация и проведение дружеских пробегов в любой точке Земли</div>
             </a>
-            <a href="#" class="text-decoration-none text-dark">
+            <a href="/" class="text-decoration-none text-dark">
                <img src="{% static 'assets/logo.png' %}" alt="Логотип" class="logo_main" style="width: 60px;">
             </a>
         </div>
     </nav>
 </header>
-<div class="offcanvas offcanvas-start" tabindex="-1" id="menuOffcanvas" aria-labelledby="menuOffcanvasLabel">
+<div class="offcanvas offcanvas-start" tabindex="-1" id="menuOffcanvas" aria-labelledby="menuOffcanvasLabel" style="max-width: 250px;">
     <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="menuOffcanvasLabel">Навигация</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Закрыть"></button>
@@ -74,61 +73,15 @@
             <li>
                 <a class="nav-link" href="{% url 'contacts' %}">Контакты</a>
             </li>
+            <li>
+                <a class="nav-link" href="{% url 'feedback_page' %}">Обратная связь</a>
+            </li>
         </ul>
     </div>
 </div>
 {% block content %}{% endblock %}
 <footer>
-    <div class="footer-flex">
-        <div>
-            <h4>Контакты</h4>
-            <p>
-                <i class="bi bi-telephone-fill"></i>
-                <a href="tel:+79112715554" style="text-decoration: none; color: inherit;">+7 (911) 271-55-54</a>
-            </p>
-            <p>
-                <i class="bi bi-envelope-fill"></i>
-                <a href="mailto:alexkorrun@mail.ru" style="text-decoration: none; color: inherit;">alexkorrun@mail.ru</a>
-            </p>
-            <p>
-                <i class="bi bi-geo-alt-fill"></i>
-                <a href="https://yandex.ru/maps/?text=г.%20Санкт-Петербург,%20ул.Демьяна%20Бедного,%2012,%20к.1" target="_blank" rel="noopener" style="text-decoration: none; color: inherit;">
-                    г. Санкт-Петербург, ул.Демьяна Бедного, 12, к.1
-                </a>
-            </p>
-            <div style="margin-top: 20px; display: flex; gap: 15px; align-items: center; font-size: 1.8rem;">
-                <a href="https://www.youtube.com/channel/UCN33vSR-3nDw4greEiPBkKw" target="_blank" rel="noopener" style="color: #FF0000;">
-                    <i class="bi bi-youtube"></i>
-                </a>
-                <a href="https://vk.com/club125871052?from=groups" target="_blank" rel="noopener" style="display: inline-flex; align-items: center; color: #4C75A3; width: 1em; height: 1em;">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" width="1em" height="1em">
-                        <path d="M12 0C5.373 0 0 5.373 0 12c0 6.628 5.373 12 12 12 6.627 0 12-5.372 12-12 0-6.627-5.373-12-12-12zm5.634 17.503h-1.288c-.431 0-.557-.28-.82-.617-.55-.729-1.32-1.748-1.68-2.046-.192-.169-.264-.223-.403-.223-.134 0-.216.08-.216.248 0 .687.008 1.037-.03 1.138-.089.266-.432.458-1.057.458-.975 0-1.758-.618-2.64-1.924-.554-.825-1.103-1.772-1.33-2.1-.103-.143-.198-.216-.3-.216-.04 0-.08.008-.08.08 0 .278.017.542.017.673v2.94c0 .3-.07.37-.343.37H6.237c-.274 0-.4-.103-.4-.37v-6.638c0-.204.108-.29.392-.29h1.43c.23 0 .32.057.42.234.55.823 1.288 2.07 1.575 2.52.244.382.326.53.42.53.115 0 .18-.085.18-.254 0-.6.02-1.044-.015-1.198-.06-.238-.35-.518-.983-1.07-1.063-.936-1.42-1.44-1.22-1.44h4.085c.252 0 .33.055.474.3.176.303.73 1.15 1.042 1.743.096.22.18.405.236.537.038.086.096.168.162.168.083 0 .15-.082.15-.234 0-.355-.007-1.12-.007-1.565 0-.252.118-.37.39-.37h1.232c.25 0 .386.12.386.38v4.976c0 .27-.136.39-.402.39z"/>
-                    </svg>
-                </a>
-                <a href="https://t.me/alexkorrun" target="_blank" rel="noopener" style="color: #0088CC; margin-top: 2px;">
-                    <i class="bi bi-telegram"></i>
-                </a>
-            </div>
-        </div>
-        <div>
-            <h4>Навигация</h4>
-            <ul style="list-style: none; padding: 0;">
-                <li><a href="{% url 'home' %}" class="text-decoration-none text-dark">Главная</a></li>
-                <li>
-                     <a href="{% url 'events' %}?type=0{% if current_year %}&year={{ current_year }}{% endif %}"
-                        class="text-decoration-none text-dark {% if current_type == '0' %}active{% endif %}">
-                            События
-                    </a>
-                </li>
-                <li>
-                    <a href="{% url 'events' %}?type=1{% if current_year %}&year={{ current_year }}{% endif %}"
-                        class="text-decoration-none text-dark {% if current_type == '1' %}active{% endif %}">
-                            Проекты
-                    </a>
-                </li>
-                <li><a href="{% url 'contacts' %}" class="text-decoration-none text-dark">Контакты</a></li>
-            </ul>
-        </div>
+    <div>
         <div class="map">
             <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A93ccce69b227863b38ead1cbd07b10ead1c64e70c9050bd29063a9b110bbe642&amp;source=constructor" width="100%" height="200" frameborder="0"></iframe>
         </div>
