--- a/app/running/templates/includes/filter.html
+++ b/app/running/templates/includes/filter.html
@@ -8,17 +8,21 @@
            class="btn btn-outline-primary custom-nav-btn {% if page == 'home' %}custom-active{% endif %}">
            Главная
         </a>
-        <a href="{% url 'events' %}?type=0{% if current_year %}&year={{ current_year }}{% endif %}"
+        <a href="{% url 'events' %}?type=0"
            class="btn btn-outline-primary custom-nav-btn {% if current_type == '0' %}custom-active{% endif %}">
            События
         </a>
-        <a href="{% url 'events' %}?type=1{% if current_year %}&year={{ current_year }}{% endif %}"
+        <a href="{% url 'events' %}?type=1"
            class="btn btn-outline-primary custom-nav-btn {% if current_type == '1' %}custom-active{% endif %}">
            Проекты
         </a>
         <a href="{% url 'contacts' %}" 
            class="btn btn-outline-primary custom-nav-btn {% if page == 'contacts' %}custom-active{% endif %}">
            Контакты
+        </a>
+        <a href="{% url 'feedback_page' %}" 
+           class="btn btn-outline-primary custom-nav-btn {% if page == 'feedback_page' %}custom-active{% endif %}">
+           Обратная связь
         </a>
     </div>
 </div>
