--- a/app/running/templates/running/events.html
+++ b/app/running/templates/running/events.html
@@ -49,6 +49,11 @@
 @media (max-width: 766px){
     .mediaModile {display: none;}
 }
+
+.d-flex.flex-column {
+    padding-right: 25px;
+    scrollbar-color: #666 #e0e0e0;
+}
 </style>
 <script src="{% static 'js/events.js' %}"></script>
 {% endblock %}
