--- a/app/running/templates/base.html
+++ b/app/running/templates/base.html
@@ -39,8 +39,8 @@
                 </a>
             </div>
             <a class="navbar-brand text-center mx-auto" href="/" style="display: flex; flex-direction: column; align-items: center; text-decoration: none;">
-                <div class="h4 text-primary mb-0">БЕГОВОЙ ТУРИЗМ</div>
-                <div class="text-primary h4" style="font-size: 0.75rem;">Организация и проведение дружеских пробегов в любой точке Земли</div>
+                <div class="h3 text-primary mb-0">БЕГОВОЙ ТУРИЗМ</div>
+                <div class="text-primary" style="font-size: 0.90rem; white-space: wrap;">Организация и проведение дружеских пробегов в любой точке Земли</div>
             </a>
             <a href="/" class="text-decoration-none text-dark">
                <img src="{% static 'assets/logo.png' %}" alt="Логотип" class="logo_main" style="width: 60px;">
@@ -80,13 +80,6 @@
     </div>
 </div>
 {% block content %}{% endblock %}
-<footer>
-    <div>
-        <div class="map">
-            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A93ccce69b227863b38ead1cbd07b10ead1c64e70c9050bd29063a9b110bbe642&amp;source=constructor" width="100%" height="200" frameborder="0"></iframe>
-        </div>
-    </div>
-</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="{% static 'js/messages.js' %}"></script>
 </body>
