--- a/app/running/templates/running/event_detail.html
+++ b/app/running/templates/running/event_detail.html
@@ -19,6 +19,7 @@
                     <h2 class="card-title fw-bold mb-2">{{ event.event_name }}</h2>
                     <p class="text-muted mb-4">
                         <i class="bi bi-calendar-event me-1"></i>
+                        {{ event.event_year }}
                         {{ event.event_date1 }} – {{ event.event_date2 }}
                     </p>
 
@@ -35,9 +36,11 @@
                                 Отчет
                             {% endif %}
                         </h5>
-                        <div class="bg-light p-3 rounded-3 border mb-4">
-                            {{ event.event_report }}
-                        </div>
+                        <div class="bg-light p-3 rounded-3 border mb-4"
+     style="max-height: 300px; overflow-y: auto;">
+    {{ event.event_report }}
+</div>
+
                     {% endif %}
 
 
