--- a/app/running/templates/running/events.html
+++ b/app/running/templates/running/events.html
@@ -21,14 +21,14 @@
             </div>
 
             <div class="col-md-5 position-relative">
-                <div class="list-group shadow-sm position-relative" style="max-height: 500px; overflow-y: auto;">
+                <div class="list-group shadow-sm position-relative" style="max-height: 400px; overflow-y: auto;">
                     {% for event in events %}
                         <a href="{% url 'event_detail' event.pk %}" 
                         target="_blank"
                         class="list-group-item list-group-item-action d-flex justify-content-between align-items-center gap-4 py-2 position-relative event-item {% if forloop.first %}active-item{% endif %}"
                         data-img="{% if event.event_foto %}{{ event.event_foto.image.url }}{% else %}{% static 'assets/default.jpg' %}{% endif %}">
                             <div class="flex-grow-1 text-content">
-                                <h5 class="mb-1 event-title">{{ event.event_name }} год</h5>
+                                <h5 class="mb-1 event-title">{{ event.event_name }}</h5>
                             </div>
                         </a>
                     {% empty %}
@@ -39,7 +39,7 @@
             <div class="col-md-5">
                 <div id="fixed-preview" class="d-none">
                     <img src="" alt="Превью" class="img-fluid rounded shadow mediaModile"
-                         style="width: 100%; max-width: 800px; max-height: 450px; object-fit: cover;">
+                         style="width: 100%; max-width: 800px; max-height: 400px; object-fit: cover;">
                 </div>
             </div>
         </div>
